<resources>
    <string name="app_name">Splash</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgit_password">Forget Password ?</string>
    <string name="dont_have_account">Dont Have Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Jhon Dao</string>
    <string name="email">username@gmail.com</string>
    <string name="confirm">Confirm password</string>
    <string name="verify">Verify</string>
    <string name="send_code">Send Code</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="payment">Payment</string>
    <string name="reviews">Reviews</string>
    <string name="statistics">Statistics</string>
    <string name="promocode">Promocode</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_company">About Company</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="edit_profile_date">Edit Profile Data</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="current_location">Current Location:</string>
    <string name="location">Street,Area,Country,City.</string>
    <string name="find_service">Find Service</string>
    <string name="log_out">Log Out</string>
    <string name="give_bonus">Give Bonus</string>
    <string name="add_notes">Add Notes</string>
    <string name="report_proplem">Report a Proplem</string>
    <string name="service_type">Service Type:</string>
    <string name="service_type_text">maintance</string>
    <string name="service_provider_info">Service Provider Info:</string>
    <string name="service_provider_info_text">10 hr</string>
    <string name="finish_time_service">Finished time of service:</string>
    <string name="finish_time_service_text">01:50:23</string>
    <string name="cancel_service">Cancel Service</string>
    <string name="end_service">End Service</string>
    <string name="search">Search</string>
    <string name="bank_name">Name of Bank</string>
    <string name="bank_name_text">"Bank Name"</string>
    <string name="card_number">Card Number:</string>
    <string name="card_number_text">34976461287239948474646347</string>
    <string name="expire_date">Expire Date:</string>
    <string name="expire_date_text">05/21</string>
    <string name="cvv">CVV:</string>
    <string name="cardholder_name">Cardholder Name:</string>
    <string name="cardholder_name_text">Jhon Daeo</string>
    <string name="save_card_information">Save Card information</string>
    <string name="cvv_text">123</string>
    <string name="get_gift">Get Your Gift</string>
</resources>
