<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp"
    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20sp"
        android:layout_height="wrap_content"
        android:background="@drawable/payment_shape">

        <ImageView
            android:layout_width="40dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/visa_icon"
           app:layout_constraintRight_toLeftOf="parent"
            android:id="@+id/payment_icon"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name_text"
            android:id="@+id/bank_name"
            android:textSize="18sp"
            android:textColor="@color/black"
           app:layout_constraintLeft_toRightOf="parent"
            />

        <TextView
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_number_text"
            android:id="@+id/card_number_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/bank_name"/>


        <TextView
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardholder_name"
            android:id="@+id/cardholder_name"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/card_number_text"
            app:layout_constraintLeft_toRightOf="parent"/>


        <TextView
            android:layout_marginTop="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardholder_name_text"
            android:id="@+id/cardholder_name_text"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/cardholder_name"
            app:layout_constraintLeft_toRightOf="parent"/>


        <TextView
            android:layout_marginLeft="20sp"
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expire_date"
            android:id="@+id/expire_date"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/card_number_text"
           app:layout_constraintLeft_toRightOf="@id/cardholder_name"/>


        <TextView
            android:layout_marginLeft="20sp"
            android:layout_marginTop="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expire_date_text"
            android:id="@+id/expire_date_text"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/expire_date"
            app:layout_constraintLeft_toRightOf="@id/cardholder_name"/>


        <TextView
            android:layout_marginTop="15sp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            android:layout_marginLeft="40sp"
            android:id="@+id/cvv"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/card_number_text"
            app:layout_constraintLeft_toRightOf="@id/expire_date"/>


        <TextView
            android:layout_marginTop="8sp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cvv_text"
            android:layout_marginLeft="40sp"
            android:id="@+id/cvv_text"
            android:textSize="20sp"

            app:layout_constraintTop_toBottomOf="@id/cvv"
            app:layout_constraintLeft_toRightOf="@id/expire_date"/>





    </android.support.constraint.ConstraintLayout>


   <ImageView
       android:layout_width="43dp"
       android:layout_height="43dp"
       android:src="@drawable/edit_payment_method"
       android:layout_marginTop="150dp"
       android:elevation="8dp"
       android:layout_gravity="right"
       android:id="@+id/edit_payment_button"/>


</FrameLayout>