<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="100dp"
    android:layout_marginRight="@dimen/margin_left"
    android:layout_marginLeft="@dimen/margin_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:id="@+id/bank_name"
            android:textSize="15sp"
            android:textColor="@color/black"
           app:layout_constraintTop_toBottomOf="parent"/>


        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/bank_name"
            android:id="@+id/bank_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_name"
            app:boxBackgroundColor="@color/colorPrimary"
            >
            <EditText
                android:textColorLink="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:id="@+id/card_number"
            android:textSize="15sp"
            android:textColor="@color/black"
           app:layout_constraintTop_toBottomOf="@+id/bank_name_text"/>


        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/card_number"
            android:id="@+id/card_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number_text"
            app:boxBackgroundColor="@color/colorPrimary"
            >
            <EditText
                android:textColorLink="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>



        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expire_date"
            android:id="@+id/expire_date"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/card_number_text"/>


        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/expire_date"
            android:id="@+id/expire_date_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/expire_date_text"
            app:boxBackgroundColor="@color/colorPrimary"
            >
            <EditText
                android:textColorLink="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            android:layout_marginLeft="40sp"
            android:id="@+id/cvv"
            android:textSize="15sp"
            android:textColor="@color/black"
          app:layout_constraintTop_toBottomOf="@+id/expire_date_text"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/card_number"

           />



        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/cvv"
            android:id="@+id/cvv_text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/expire_date_text"
            app:boxBackgroundColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/expire_date_text"
            android:layout_marginLeft="40dp"
            >
            <EditText
                android:textColorLink="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardholder_name"
            android:id="@+id/cardholder_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/expire_date_text"
            app:layout_constraintLeft_toRightOf="parent"/>


        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/cardholder_name"
            android:id="@+id/cardholder_name_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/cardholder_name_text"
            app:boxBackgroundColor="@color/colorPrimary"
            >
            <EditText
                android:textColorLink="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_card_information"
            app:layout_constraintTop_toBottomOf="@+id/cardholder_name_text"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorLink="@color/colorPrimary"
            android:id="@+id/save_card_checkbox"/>





    <Button
        android:layout_marginTop="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/save_payment_information"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/save_card_checkbox"
        android:text="Save"/>

</android.support.constraint.ConstraintLayout>