<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectServiceActivity">



        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_bar"
            app:layout_constraintTop_toBottomOf="parent">
            <include layout="@layout/app_bar"
                xmlns:local="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />
        </android.support.design.widget.AppBarLayout>

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/state_progress"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spb_currentStateNumber="one"
            app:spb_maxStateNumber="three"
            app:spb_currentStateDescriptionColor="@color/colorPrimary"/>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/state_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/root"
            android:orientation="vertical"
            android:background="@color/white"
            android:elevation="2dp"
            android:paddingLeft="15sp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/map_search"
                android:hint="@string/search"
                android:drawablePadding="15sp"/>


        </LinearLayout>

        <com.google.android.gms.maps.MapView
            app:layout_constraintTop_toBottomOf="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/map_view"
            />


        <TextView
            app:layout_constraintTop_toBottomOf="@+id/map_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/margin_left"
            android:id="@+id/location"
            />
        <TextView
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:drawableLeft="@drawable/map_address"
            android:drawablePadding="15sp"
            android:id="@+id/current_location"
            android:textSize="15sp"
            />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/current_location"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Service:"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/margin_left"
            android:id="@+id/select_service"/>

        <Spinner
            app:layout_constraintTop_toBottomOf="@+id/select_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            ></Spinner>




        <Button
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continue_service"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="Continue"
            android:background="@color/colorPrimary"
            />



</android.support.constraint.ConstraintLayout>